--- a/public/less/index.less
+++ b/public/less/index.less
@@ -37,9 +37,10 @@
   width: 100%;
   overflow: hidden;
   margin-bottom: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-repeat: no-repeat;
+  background-size: cover!important;
+  background-position: center;
+  box-shadow: 1px 1px 1px 1px #ccc;
 }
 
 .parallax{
@@ -118,5 +119,6 @@ blockquote p {
   line-height: 22px
 }
 .border-0{
+  box-shadow: 1px 1px 1px 1px #ccc;
   border-radius: 0;
 }
