--- a/views/index.jade
+++ b/views/index.jade
@@ -14,8 +14,7 @@ block content
 								h3 Events
 								p
 									|Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas, urna ac gravida semper, magna nisl sodales est, ut finibus dolor est nec nunc. Pellentesque imperdiet felis eget tellus ultrices, ut venenatis risus rhoncus. Phasellus ac vestibulum urna. Proin nisl nisi, gravida ut vehicula ut, feugiat tempor quam.
-							.item-image
-								img(src='/img/bridge.jpg')
+							.item-image(style="background: url('/img/bridge.jpg')")
 							a.btn.btn-primary.border-0 Read More
 							.clearfix
 						.col-md-4.section-item
@@ -23,8 +22,7 @@ block content
 								h3 Opportunities
 								p
 									|Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas, urna ac gravida semper, magna nisl sodales est, ut finibus dolor est nec nunc. Pellentesque imperdiet felis eget tellus ultrices, ut venenatis risus rhoncus.
-							.item-image
-								img(src='/img/engipic.jpg')
+							.item-image(style="background: url('/img/engipic.jpg');")
 							a.btn.btn-primary.border-0 Read More
 							.clearfix
 						.col-md-4.section-item
@@ -32,8 +30,7 @@ block content
 								h3 Collaborate
 								p
 									|Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas, urna ac gravida semper
-							.item-image
-								img(src='/img/autocad.jpg')
+							.item-image(style="background: url('/img/autocad.jpg');")
 							a.btn.btn-primary.border-0 Read More
 							.clearfix
 		.container-fluid
