--- a/public/css/clndr.css
+++ b/public/css/clndr.css
@@ -1,424 +1,341 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);
-.clearfix:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-}
-.clearfix {
-  display: inline-block;
-}
-html[xmlns] .clearfix {
-  display: block;
-}
-* html .clearfix {
-  height: 1%;
-}
-.noselect {
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-h4 {
-  width: 75%;
-  text-align: center;
-  font-family: 'Droid Sans Mono';
-  font-weight: normal;
-  color: white;
-  font-size: 14px;
-  margin: 0 auto 1em auto;
-  padding: 1em;
-  background: #b63642;
-}
-p {
-  text-align: center;
-  font-family: 'Droid Sans Mono';
-  margin: 3em auto 1em auto;
-  padding-top: 0.5em;
-  padding-bottom: 0.5em;
-  border-bottom: 2px solid #414141;
-  background: #f4f4f4;
-}
-.left-align {
-  text-align: left;
-}
-.right-align {
-  text-align: right;
-}
-.cal1 {
-  margin: 30px auto;
-  max-width: 600px;
-  font-family: 'Droid Sans Mono';
-  font-size: 14px;
-}
-.cal1 .clndr .clndr-controls {
-  display: inline-block;
-  width: 100%;
-  position: relative;
-  margin-bottom: 10px;
-}
-.cal1 .clndr .clndr-controls .month {
-  float: left;
-  width: 33%;
-  text-align: center;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button {
-  float: left;
-  width: 33%;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button.rightalign {
-  text-align: right;
-  width: 34%;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-next-button {
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-next-button:hover {
-  background: #ddd;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-next-button.inactive {
-  opacity: 0.5;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-next-button.inactive:hover {
-  background: none;
-  cursor: default;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-previous-button {
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-previous-button:hover {
-  background: #ddd;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-previous-button.inactive {
-  opacity: 0.5;
-}
-.cal1 .clndr .clndr-controls .clndr-control-button .clndr-previous-button.inactive:hover {
-  background: none;
-  cursor: default;
-}
-.cal1 .clndr .clndr-table {
-  table-layout: fixed;
-  width: 100%;
-}
-.cal1 .clndr .clndr-table .header-days {
-  height: 30px;
-  font-size: 10px;
-  background: #0D70A6;
-}
-.cal1 .clndr .clndr-table .header-days .header-day {
-  vertical-align: middle;
-  text-align: center;
-  border-left: 1px solid #000000;
-  border-top: 1px solid #000000;
-  color: #fff;
-}
-.cal1 .clndr .clndr-table .header-days .header-day:last-child {
-  border-right: 1px solid #000000;
-}
-.cal1 .clndr .clndr-table tr {
-  height: 85px;
-}
-.cal1 .clndr .clndr-table tr td {
-  vertical-align: top;
-}
-.cal1 .clndr .clndr-table tr .day {
-  border-left: 1px solid #000000;
-  border-top: 1px solid #000000;
-  width: 100%;
-  height: inherit;
-}
-.cal1 .clndr .clndr-table tr .day:hover {
-  background: #eee;
-}
-.cal1 .clndr .clndr-table tr .day.today,
-.cal1 .clndr .clndr-table tr .day.my-today {
-  background: #9AD6E3;
-}
-.cal1 .clndr .clndr-table tr .day.today:hover,
-.cal1 .clndr .clndr-table tr .day.my-today:hover {
-  background: #72c6d8;
-}
-.cal1 .clndr .clndr-table tr .day.today.event,
-.cal1 .clndr .clndr-table tr .day.my-today.event {
-  background: #a7dbc1;
-}
-.cal1 .clndr .clndr-table tr .day.event,
-.cal1 .clndr .clndr-table tr .day.my-event {
-  background: #B4E09F;
-}
-.cal1 .clndr .clndr-table tr .day.event:hover,
-.cal1 .clndr .clndr-table tr .day.my-event:hover {
-  background: #96d478;
-}
-.cal1 .clndr .clndr-table tr .day.inactive,
-.cal1 .clndr .clndr-table tr .day.my-inactive {
-  background: #ddd;
-}
-.cal1 .clndr .clndr-table tr .day:last-child {
-  border-right: 1px solid #000000;
-}
-.cal1 .clndr .clndr-table tr .day .day-contents {
-  box-sizing: border-box;
-  padding: 8px;
-  font-size: 12px;
-  text-align: right;
-}
-.cal1 .clndr .clndr-table tr .empty,
-.cal1 .clndr .clndr-table tr .adjacent-month,
-.cal1 .clndr .clndr-table tr .my-empty,
-.cal1 .clndr .clndr-table tr .my-adjacent-month {
-  border-left: 1px solid #000000;
-  border-top: 1px solid #000000;
-  width: 100%;
-  height: inherit;
-  background: #eee;
-}
-.cal1 .clndr .clndr-table tr .empty:hover,
-.cal1 .clndr .clndr-table tr .adjacent-month:hover,
-.cal1 .clndr .clndr-table tr .my-empty:hover,
-.cal1 .clndr .clndr-table tr .my-adjacent-month:hover {
-  background: #ddd;
-}
-.cal1 .clndr .clndr-table tr .empty:last-child,
-.cal1 .clndr .clndr-table tr .adjacent-month:last-child,
-.cal1 .clndr .clndr-table tr .my-empty:last-child,
-.cal1 .clndr .clndr-table tr .my-adjacent-month:last-child {
-  border-right: 1px solid #000000;
-}
-.cal1 .clndr .clndr-table tr:last-child .day,
-.cal1 .clndr .clndr-table tr:last-child .my-day {
-  border-bottom: 1px solid #000000;
-}
-.cal1 .clndr .clndr-table tr:last-child .empty,
-.cal1 .clndr .clndr-table tr:last-child .my-empty {
-  border-bottom: 1px solid #000000;
-}
-.cal2 {
-  max-width: 177px;
-  margin: 30px auto;
-  font-family: 'Droid Sans Mono';
-}
-.cal2 .clndr .clndr-controls {
-  display: block;
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 3px;
-}
-.cal2 .clndr .clndr-controls .clndr-previous-button {
-  float: left;
-  width: 10%;
-  text-align: left;
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.cal2 .clndr .clndr-controls .clndr-previous-button:hover {
-  background-color: #f4f4f4;
-}
-.cal2 .clndr .clndr-controls .month {
-  float: left;
-  width: 80%;
-  text-align: center;
-}
-.cal2 .clndr .clndr-controls .clndr-next-button {
-  float: left;
-  width: 10%;
-  text-align: right;
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.cal2 .clndr .clndr-controls .clndr-next-button:hover {
-  background-color: #f4f4f4;
-}
-.cal2 .clndr .clndr-grid {
-  text-align: center;
-  border: 1px solid #FF4545;
-  display: inline-block;
-}
-.cal2 .clndr .clndr-grid .header-day {
-  float: left;
-  width: 25px;
-  height: 25px;
-  background: #FF4545;
-}
-.cal2 .clndr .clndr-grid .day {
-  float: left;
-  width: 25px;
-  height: 25px;
-}
-.cal2 .clndr .clndr-grid .day.event {
-  background-color: #B4E09F;
-}
-.cal2 .clndr .clndr-grid .day.today {
-  background-color: #E3C57F;
-}
-.cal2 .clndr .clndr-grid .empty,
-.cal2 .clndr .clndr-grid .adjacent-month {
-  float: left;
-  width: 25px;
-  height: 25px;
-  background: #ddd;
-}
-.cal2 .clndr .clndr-today-button {
-  width: 100%;
-  text-align: center;
-  cursor: pointer;
-}
-.cal2 .clndr .clndr-today-button:hover {
-  background-color: #ddd;
-}
-.cal2 .multi-month-controls .quarter-button {
-  display: inline-block;
-  width: 25%;
-}
-.cal2 .multi-month-controls .quarter-button:hover {
-  cursor: pointer;
-  background-color: #f4f4f4;
-}
-.cal2 .day.inactive {
-  background-color: #aaa;
-}
-.cal3 {
-  max-width: 354px;
-  margin: 0 auto;
-  font-family: 'Droid Sans Mono';
-}
-.cal3 .cal {
-  float: left;
-  width: 177px;
-}
-.cal3 .clndr .clndr-controls {
-  display: block;
-  display: inline-block;
-  width: 100%;
-  margin-bottom: 8px;
-}
-.cal3 .clndr .clndr-controls.top {
-  margin-bottom: -22px;
-  position: relative;
-  z-index: 1;
-}
-.cal3 .clndr .clndr-controls .clndr-previous-button {
-  float: left;
-  width: 10%;
-  text-align: left;
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.cal3 .clndr .clndr-controls .clndr-previous-button:hover {
-  background-color: #f4f4f4;
-}
-.cal3 .clndr .clndr-controls .month {
-  text-align: center;
-  width: 80%;
-  margin: 0 auto;
-}
-.cal3 .clndr .clndr-controls .clndr-next-button {
-  float: right;
-  width: 10%;
-  text-align: right;
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.cal3 .clndr .clndr-controls .clndr-next-button:hover {
-  background-color: #f4f4f4;
-}
-.cal3 .clndr .clndr-grid {
-  text-align: center;
-  border: 1px solid #FF4545;
-  display: inline-block;
-}
-.cal3 .clndr .clndr-grid .header-day {
-  float: left;
-  width: 25px;
-  height: 25px;
-  background: #FF4545;
-}
-.cal3 .clndr .clndr-grid .day {
-  float: left;
-  width: 25px;
-  height: 25px;
-}
-.cal3 .clndr .clndr-grid .day.event {
-  background-color: #B4E09F;
-}
-.cal3 .clndr .clndr-grid .day.today {
-  background-color: #E3C57F;
-}
-.cal3 .clndr .clndr-grid .empty,
-.cal3 .clndr .clndr-grid .adjacent-month {
-  float: left;
-  width: 25px;
-  height: 25px;
-  background: #ddd;
-}
-.cal3 .clndr .clndr-today-button {
-  width: 100%;
-  text-align: center;
-  cursor: pointer;
-}
-.cal3 .clndr .clndr-today-button:hover {
-  background-color: #ddd;
-}
-.cal3 .multi-month-controls .quarter-button {
-  display: inline-block;
-  width: 25%;
-}
-.cal3 .multi-month-controls .quarter-button:hover {
-  cursor: pointer;
-  background-color: #f4f4f4;
-}
-.clndr-next-button,
-.clndr-previous-button,
-.clndr-next-year-button,
-.clndr-previous-year-button {
-  -webkit-user-select: none;
-  /* Chrome/Safari */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* IE10+ */
-}
-.clndr-next-button.inactive,
-.clndr-previous-button.inactive,
-.clndr-next-year-button.inactive,
-.clndr-previous-year-button.inactive {
-  opacity: 0.5;
-  cursor: default;
-}
+
+  @import url(http://fonts.googleapis.com/css?family=Asap:400,700);
+
+  @import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+  .noselect {
+    -webkit-user-select: none;
+    /* Chrome/Safari */
+
+    -moz-user-select: none;
+    /* Firefox */
+
+    -ms-user-select: none;
+    /* IE10+ */
+
+  }
+  #mini-clndr {
+    font-family: Asap, Helvetica, Arial;
+    margin: 0 0 20px;
+    width: 210px;
+    -moz-box-shadow: 4px 4px 0 #343434;
+    -webkit-box-shadow: 4px 4px 0 #343434;
+    box-shadow: 4px 4px 0 #343434;
+  }
+  #mini-clndr .clndr {
+    overflow: hidden;
+    border-bottom: 7px solid #69a776;
+    height: 185px;
+  }
+  #mini-clndr .clndr .controls {
+    background-color: #69a776;
+    color: white;
+  }
+  #mini-clndr .clndr .controls .clndr-previous-button,
+  #mini-clndr .clndr .controls .clndr-next-button {
+    width: 15%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    -webkit-user-select: none;
+    /* Chrome/Safari */
+
+    -moz-user-select: none;
+    /* Firefox */
+
+    -ms-user-select: none;
+    /* IE10+ */
+
+    -webkit-transition: background-color 0.5s;
+    -moz-transition: background-color 0.5s;
+    -ms-transition: background-color 0.5s;
+    -o-transition: background-color 0.5s;
+    transition: background-color 0.5s;
+  }
+  #mini-clndr .clndr .controls .clndr-previous-button:hover,
+  #mini-clndr .clndr .controls .clndr-next-button:hover {
+    background-color: #528b5e;
+  }
+  #mini-clndr .clndr .controls .month {
+    width: 70%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
+  }
+  #mini-clndr .clndr .days-container {
+    position: relative;
+    width: 210px;
+    height: 148px;
+    display: inline-block;
+  }
+  #mini-clndr .clndr .days-container .days {
+    position: absolute;
+    left: 0;
+    width: 210px;
+    height: 148px;
+    -webkit-transition: left 0.5s;
+    -moz-transition: left 0.5s;
+    -ms-transition: left 0.5s;
+    -o-transition: left 0.5s;
+    transition: left 0.5s;
+    background-color: #ebebeb;
+  }
+  #mini-clndr .clndr .days-container .days .day,
+  #mini-clndr .clndr .days-container .days .empty {
+    width: 30px;
+    display: inline-block;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    font-size: 12px;
+    text-align: center;
+    color: #212121;
+    border-right: 1px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  #mini-clndr .clndr .days-container .days .day.event,
+  #mini-clndr .clndr .days-container .days .empty.event {
+    background-color: #d2d2d2;
+    -webkit-transition: background-color 0.5s;
+    -moz-transition: background-color 0.5s;
+    -ms-transition: background-color 0.5s;
+    -o-transition: background-color 0.5s;
+    transition: background-color 0.5s;
+    cursor: pointer;
+  }
+  #mini-clndr .clndr .days-container .days .day.event:hover,
+  #mini-clndr .clndr .days-container .days .empty.event:hover {
+    background-color: #b8b8b8;
+  }
+  #mini-clndr .clndr .days-container .days .day.adjacent-month,
+  #mini-clndr .clndr .days-container .days .empty.adjacent-month {
+    color: rgba(0, 0, 0, 0.3);
+  }
+  #mini-clndr .clndr .days-container .days .empty {
+    height: 31px;
+    vertical-align: bottom;
+  }
+  #mini-clndr .clndr .days-container .days .headers {
+    background-color: #97ce7f;
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+  #mini-clndr .clndr .days-container .days .headers .day-header {
+    width: 30px;
+    display: inline-block;
+    text-align: center;
+    color: white;
+  }
+  #mini-clndr .clndr .days-container .events {
+    position: absolute;
+    left: 294px;
+    width: 210px;
+    height: 185px;
+    -webkit-transition: left 0.5s;
+    -moz-transition: left 0.5s;
+    -ms-transition: left 0.5s;
+    -o-transition: left 0.5s;
+    transition: left 0.5s;
+    background-color: #ebebeb;
+  }
+  #mini-clndr .clndr .days-container .events .headers {
+    position: relative;
+  }
+  #mini-clndr .clndr .days-container .events .event-header {
+    width: 100%;
+    background-color: #97ce7f;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+    color: white;
+  }
+  #mini-clndr .clndr .days-container .events .x-button {
+    position: absolute;
+    font-size: 80%;
+    top: 7px;
+    left: 20px;
+    cursor: pointer;
+    -webkit-transition: color 0.25s;
+    -moz-transition: color 0.25s;
+    -ms-transition: color 0.25s;
+    -o-transition: color 0.25s;
+    transition: color 0.25s;
+  }
+  #mini-clndr .clndr .days-container .events .x-button:hover {
+    color: white;
+  }
+  #mini-clndr .clndr .days-container .events .events-list {
+    overflow: scroll;
+    height: 118px;
+  }
+  #mini-clndr .clndr .days-container .events .events-list .event {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    -webkit-transition: background-color 0.25s;
+    -moz-transition: background-color 0.25s;
+    -ms-transition: background-color 0.25s;
+    -o-transition: background-color 0.25s;
+    transition: background-color 0.25s;
+  }
+  #mini-clndr .clndr .days-container .events .events-list .event:hover {
+    background-color: #f5f5f5;
+  }
+  #mini-clndr .clndr .days-container .events .events-list .event a {
+    position: relative;
+    font-size: 12px;
+    letter-spacing: 1px;
+    line-height: 16px;
+    background-color: transparent;
+    color: #212121;
+    text-decoration: none;
+    -webkit-transition: color 0.25s;
+    -moz-transition: color 0.25s;
+    -ms-transition: color 0.25s;
+    -o-transition: color 0.25s;
+    transition: color 0.25s;
+  }
+  #mini-clndr .clndr .days-container .events .events-list .event a:hover {
+    background-color: transparent;
+    color: #69a776;
+  }
+  #mini-clndr .clndr .days-container.show-events .days {
+    left: -294px;
+  }
+  #mini-clndr .clndr .days-container.show-events .events {
+    left: 0;
+  }
+  
+.clndr-area {
+      padding-top: 24px;
+    font-family: Inconsolata, Monaco, 'Andale Mono', Courier;
+    font-size: 18px;
+    color: #212121;
+  }
+  .clndr-area h1,
+  .clndr-area h2,
+  .clndr-area h3,
+  .clndr-area h4,
+  .clndr-area h5,
+  .clndr-area h6 {
+    margin-bottom: 1em;
+    color: white;
+    text-shadow: 1px 1px 1px #212121;
+  }
+  .clndr-area p {
+    line-height: 1.5em;
+    margin-bottom: 1em;
+  }
+  .clndr-area p + .clndr-area h3 {
+    margin-top: 3em;
+  }
+ .clndr-area a  {
+    text-decoration: none;
+    background-color: #ebebeb;
+    color: #3883a3;
+    padding: 0 2px;
+    border-radius: 2px;
+    -webkit-transition: background-color 0.2s, color 0.4s;
+    -moz-transition: background-color 0.2s, color 0.4s;
+    -ms-transition: background-color 0.2s, color 0.4s;
+    -o-transition: background-color 0.2s, color 0.4s;
+    transition: background-color 0.2s, color 0.4s;
+  }
+  .clndr-area a:hover {
+    background-color: #98cede;
+    color: #212121;
+  }
+ .clndr-area  span.code {
+    padding: 0 2px;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 2px;
+  }
+  .block {
+    padding: 80px 0;
+    width: 100%;
+  }
+  .inner {
+    max-width: 960px;
+    padding: 0 20px;
+    margin: 0 auto;
+  }
+  .clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+  }
+  .clearfix {
+    display: inline-block;
+  }
+ .clndr-area  strong {
+    font-weight: 700;
+  }
+  .bg-gray {
+    background-color: #414141;
+  }
+  .bg-red {
+    background-color: #ff5a45;
+  }
+  .bg-red a {
+    color: #ff5a45;
+  }
+  .bg-red a:hover {
+    background-color: #ffb4ab;
+    color: #212121;
+  }
+  .bg-blue {
+    background-color: #71bbd2;
+  }
+  .bg-green {
+    background-color: #97ce7f;
+  }
+  .bg-yellow {
+    background-color: #ddca9a;
+  }
+  .center {
+    text-align: center;
+  }
+  .banner-text {
+    text-align: center;
+    color: #f4f4f4;
+    letter-spacing: 1px;
+    font-weight: normal;
+    text-shadow: 2px 2px 2px #212121;
+  }
+  .banner-text.below {
+    margin-top: 30px;
+  }
+  .banner-text.below a {
+    background-color: transparent;
+    color: #97ce7f;
+  }
+  .banner-text.below a:hover {
+    color: #d3eac9;
+  }
+  .more-space {
+    margin-top: 3em;
+  }
+  @media all and (max-width: 768px) {
+   
+     .clndr-area h1.banner-text {
+      font-size: 28px;
+    }
+    .banner-text.below {
+      font-size: 16px;
+      word-wrap: break-word;
+    }
+    .clndr-area code[class*="language-"],
+    .clndr-area pre[class*="language-"] {
+      font-size: 14px;
+    }
+  
+  }
+
