--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -1,5 +1,5 @@
 html,body{
-	height: 100%;
+	height: 100%!important;
   font-size: 16px;
   line-height: 24px;
 }
@@ -90,9 +90,6 @@ ul{
   }
 }
 .main-content{
-  margin-top:-90px;
-  padding-bottom:330px;
-  position:relative;
 }
 .flip-wrapper{
   position: relative;
