--- a/views/members.jade
+++ b/views/members.jade
@@ -97,7 +97,7 @@ block content
 														td {{$index+1}}
 														td {{row.info.name}}
 														td(ng-if="curr=='seniors'") {{row.info.post}}
-														td(ng-if="curr=='others'") {{row.info.post + ' Member'}}
+														td(ng-if="curr=='others'") {{row.info.post }}
 														td {{row.info.batch}}
 														td {{row.info.contact.email}}
 					if(title=='Gallery')
